k8s/overlays/dev/api-monitor-local-image.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-monitor
spec:
  template:
    spec:
      containers:
        - name: api-monitor
          imagePullPolicy: IfNotPresent
