k8s/overlays/dev/postgres-dev.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "bifrost", "-d", "bifrost_dev"]
